  13-Jun-2023  - V0.72 Improve logging
   3-Jul-2023  - V0.73 imgt.org no longer supports http
  18-Jul-2023  - V0.74 Update baseVersion for ChEMBL
  19-Sep-2023  - V0.75 Update testCache and reload methods for target providers;
                       Make CARDTargetOntologyProvider stashable;
                       Add try/except for chembl_webresource_client.new_client imports in ChEMBL providers in case of service downtime
  21-Sep-2023  - V0.76 Additional updates to testCache and reload methods for target providers
   9-Jan-2024  - V0.77 Update CARDTargetAnnotationProvider to ensure same annotations are selected between reruns (using a tie breaker);
                       Bug fix in ChEMBLTargetActivityProvider in updating cache file
   1-Jul-2024  - V0.78 Update SAbDabTargetProvider; Fix pylinting
  22-Jul-2024  - V0.79 Update SAbDabTargetProvider
  20-Aug-2024  - V0.80 Add support for loading and accessing target cofactor data on MongoDB;
                       Add mock-data submodule
  23-Aug-2024  - V0.81 Add context manager for forming mongo connections in TargetCofactorDbProvider
  26-Aug-2024  - V0.82 Revert back to persistent client connections;
                       Update CARDTargetOntologyProvider resource loading behavior
   9-Dec-2024  - V0.83 Update Azure pipelines to use latest macOS, Ubuntu, and python 3.10
   5-Jun-2025  - V0.84 Update CARDTargetProvider and CARDTargetAnnotationProvider to handle/skip cases missing "AMR Gene Family" term
  28-Jul-2025  - V0.85 Update URL to Pharos download data
   3-Sep-2025  - V0.86 Update IMGTTargetProvider and other TargetProviders to fail upon download failure
   4-Sep-2025  - V0.87 Bump version to force new build (previous version built prematurely)
  21-Oct-2025  - V0.88 Adjust chunkSize for cofactor loading;
                       Add fallback url source for Pharos TCRD data;
                       Switch to 'pyproject.toml' file and update test pipelines to python 3.13