@@ -1,8 +1,0 @@
-#
-# File: py-rcsb_utils_targets/MANIFEST.in
-#
-include HISTORY.txt
-include README.md
-include LICENSE
-include pyproject.toml
-#
