@@ -71,7 +71,8 @@ jobs:
             displayName: "Installing OS dependencies"
           - script: apt-cache policy | grep http | awk '{print $2 $3}' | sort -u
             displayName: "Checking for repos"
-          #
+          - script: sudo apt-get update
+            displayName: 'update apt'
           - script: sudo apt-get install flex
             displayName: "Install flex"
           - script: sudo apt-get install bison
@@ -101,9 +102,8 @@ jobs:
             sudo cp mmseqs/bin/mmseqs /usr/local/bin/mmseqs
           displayName: 'Install mmseqs2 binary'
       #
-      # Mongo install
-      - ${{ if and(contains(parameters.fixtures, 'mongodb'), startsWith(parameters.os, 'linux')) }}:
-          # Mongo install
+      - ? ${{ if and(contains(parameters.fixtures, 'mongodb'), startsWith(parameters.os, 'linux')) }}
+        : # Mongo install
           - script: |
               sudo apt-get install gnupg curl
               curl -fsSL https://www.mongodb.org/static/pgp/server-8.0.asc | sudo gpg -o /usr/share/keyrings/mongodb-server-8.0.gpg --dearmor
@@ -153,25 +153,18 @@ jobs:
               ${{ format('python -m tox -e {0}-py313', parameters.tox) }}
             displayName: "Running tox task"
       #
-      #
       #  Build artifacts if this is a test target (i.e. labeled as py##)
       #
       - ${{ if startsWith(parameters.tox, 'py') }}:
-          - script: pip install --upgrade pip build twine
+          - script: pip install --upgrade pip build twine hatch
             displayName: "Acquire build tools"
           - script: python -m build --sdist --wheel --outdir "$(System.DefaultWorkingDirectory)/dist"
             displayName: "Build source and wheel distributions"
-          - script: python -m build --sdist --outdir "$(System.DefaultWorkingDirectory)/udist"
-            displayName: "Build source distribution to udist"
-
           #
           # Check the install artifacts
-          - script: ls -lR "$(System.DefaultWorkingDirectory)/dist" "$(System.DefaultWorkingDirectory)/udist"
+          - script: ls -lR "$(System.DefaultWorkingDirectory)/dist"
             displayName: "Listing of installed software"
           #
           - publish: $(System.DefaultWorkingDirectory)/dist
             artifact: ${{ format('sw_{0}_{1}', parameters.tox, parameters.os) }}
-          #
-          - publish: $(System.DefaultWorkingDirectory)/udist
-            artifact: ${{ format('sw_u_{0}_{1}', parameters.tox, parameters.os) }}
         #
